==========================================
 2011/01/27 5:48:01 Version 1.16 ALPHA
==========================================
 - Added /cron/notify.php Notification Cron Added & Matrixstream code added (wishcraft)
 - Added /language/english/email.php Email Language Constants Added to Application (wishcraft)
 - Added /language/english/mail_templates/vod_video_available_cart.html Email Template (wishcraft)
 - Added /language/english/mail_templates/vod_video_expired_cart.html Email Template (wishcraft)
 - Added /language/english/mail_templates/vod_video_expired_viewing_cart.html Email Template (wishcraft)
 - Added /templates/vod_index_cart_view.html User Cart View Added to Application (wishcraft)
 - Added /templates/vod_index_cart_xpayment_form.html User Cart Checkout Form Added to Application (wishcraft)
 - Added /templates/vod_index_category_list.html User Category List Added to Application (wishcraft)
 - Added /templates/vod_index_category_view.html User Category View Added to Application (wishcraft)
 - Added /templates/vod_index_videos_list.html User Video List Added to Application (wishcraft)
 - Added /templates/vod_index_videos_view.html User Video View Details Added to Application (wishcraft)
 - Changed /class/cart.php restructing and new code added for cart & cart session (wishcraft)
 - Changed /class/currency.php new functions added to the handler (wishcraft)
 - Changed /class/session.php restructing and new code added for cart & cart session  (wishcraft)
 - Changed /index.php User Interface Added (wishcraft)
 - Changed /language/english/modinfo.php New & Changed Preferences Language Constants Added to Application (wishcraft)
 - Changed /xoops_version.php Support for New Variables, Constants & Templates; version updated of Application (wishcraft)
 - Changed /include/update.php Emptied of all flowplayer upgrades - new module installation (wishcraft)
 - Renamed /language/english/mainfile.php to main.php - Main Language Constants Added (wishcraft)
  